[Frontend] Fixed overflow problem that was hiding toolbar menu
open #199
open #283
Tweaks to .tool-bar layout to handle very
narrow widths;

--- a/platform/commonUI/general/res/sass/user-environ/_layout.scss
+++ b/platform/commonUI/general/res/sass/user-environ/_layout.scss
@@ -257,11 +257,13 @@
     line-height: $ueEditToolBarH;
     height: 0px;
     opacity: 0;
-    overflow: hidden;
     &.active {
         height: $ueEditToolBarH + $interiorMargin;
         margin-bottom: $interiorMargin;
         opacity: 1;
+    }
+    .tool-bar {
+        right: $interiorMargin;
     }
 }
 
