--- a/platform/commonUI/general/res/sass/user-environ/_tool-bar.scss
+++ b/platform/commonUI/general/res/sass/user-environ/_tool-bar.scss
@@ -20,6 +20,9 @@
  * at runtime from the About dialog for additional information.
  *****************************************************************************/
 .tool-bar {
+    &.btn-bar {
+        white-space: nowrap;
+    }
 	.l-control-group {
 		height: $btnToolbarH;
 	}
